Fix #28065 - [Feature] Add reauth deliverable support

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -52,7 +52,8 @@ button.columns-conf.description = Configuration des colonnes
 button.copy.to.clipboard        = Copier les lignes
 button.export-csv               = &nbsp;
 button.export-csv.description   = Exporter
-button.reauth.validate          = R\u00E9-authentifier pour valider
+button.reauth.save              = Se r\u00E9-authentifier pour enregistrer
+button.reauth.validate          = Se r\u00E9-authentifier pour valider
 button.wused                    = Cas d'emploi
 
 dashlet.my-olapchart.description = Composant permettant d'afficher un graphique BI
