Fix #23404 - [Feature] Create documentType - fix locale + add BeCPGModel constant

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -74,10 +74,10 @@ bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Niveau
 bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title   = Expiration automatique (d)
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title              = Chemin
 bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title       = Type de validit\u00E9
+bcpg_bcpgmodel.property.bcpg_docTypeFormula.title               = Formule
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title           = Est obligatoire
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title       = Familles li\u00E9es
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title           = Types d'entit\u00E9
-bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title      = Formule
 bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title            = Format du nom
 bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title          = Est obligatoire
 bcpg_bcpgmodel.property.bcpg_documentState.title                = Etat du document
