Fix #23404 - [Feature] Add aiValidation and ai aspects

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
@@ -1,4 +1,6 @@
 
+aspect.bcpg_aiAspect                = IA
+aspect.bcpg_aiValidationAspect      = Validation IA
 aspect.bcpg_autoMergeAspect         = Rangement de version automatique
 aspect.bcpg_docLinkedEntitiesAspect = Lien document entit\u00E9s
 aspect.bcpg_documentAspect          = Document
