Fix #27410 - [Assistance] Added growingMethodCode locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -137,6 +137,7 @@ gs1_gs1Model.property.gs1_freeQuantityOfProductUnit.description                 
 gs1_gs1Model.property.gs1_freeQuantityOfProductUnit.title                                 = Unit\u00E9
 gs1_gs1Model.property.gs1_functionalName.description                                      = D\u00E9crit l'utilisation du produit ou du service par le consommateur. Devrait aider \u00E0 clarifier la classification des produits associ\u00E9e au GTIN.
 gs1_gs1Model.property.gs1_functionalName.title                                            = Nom fonctionnel
+gs1_gs1Model.property.gs1_growingMethodCode.title                                         = M\u00E9thode de culture
 gs1_gs1Model.property.gs1_handlingInstructionsCodes.title                                 = Instructions de manutention
 gs1_gs1Model.property.gs1_hasBatchNumber.title                                            = Num\u00E9ro de lot
 gs1_gs1Model.property.gs1_hasDisplayReadyPackaging.description                            = Indique que l'unit\u00E9 commerciale est de type "pr\u00EAt \u00E0 vendre". C'est-\u00E0-dire que le lot/carton est pr\u00EAt pour \u00EAtre mis directement en rayon
