--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -52,6 +52,7 @@ bcpg_bcpgmodel.association.bcpg_nrScript.title                  = Script
 bcpg_bcpgmodel.association.bcpg_nrTarget.title                  = Dans le dossier
 bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Entit\u00E9 parente
 bcpg_bcpgmodel.description                                      = BCPG Domain Model
+bcpg_bcpgmodel.property.bcpg_alData.title                       = Contenu de l'activit\u00E9
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Type d'activit\u00E9
 bcpg_bcpgmodel.property.bcpg_alUserId.title                     = Utilisateur
 bcpg_bcpgmodel.property.bcpg_autoMergeComments.title            = Commentaires
