Fix #26884 - [Bug] Add activity content label

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
@@ -52,6 +52,7 @@ bcpg_bcpgmodel.association.bcpg_nrScript.title                  = Script
 bcpg_bcpgmodel.association.bcpg_nrTarget.title                  = Inside folder
 bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Parent entity
 bcpg_bcpgmodel.description                                      = beCPG domain model
+bcpg_bcpgmodel.property.bcpg_alData.title                       = Activity content
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Activity type
 bcpg_bcpgmodel.property.bcpg_alUserId.title                     = User
 bcpg_bcpgmodel.property.bcpg_autoMergeComments.title            = Comments
