Fix #28282 - [I18N] Add missing keys

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_en.properties
@@ -241,6 +241,7 @@ data.list.resourceParam                       = Resource parameters
 data.list.resourceParamList                   = Resource parameters list
 data.list.resourceparamtypes                  = Resource parameter types
 data.list.resourceproduct_hierarchy           = Hierarchy of resources
+data.list.scoreCriterion                     = Score Criteria
 data.list.scoreList                           = Scores
 data.list.securitylist                        = Security lists
 data.list.sellingunitofmeasure                = Units of measure used for the Invoice
