Fix #23404 - [Feature] Add document formulation

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
@@ -137,6 +137,8 @@ search.form.label.qa_batch                  = Process order
 search.form.label.qa_nc                     = Non-conformities
 search.form.label.qa_qualityControl         = Quality control
 
+status.ai-refused           = AI Refused
+status.ai-valid             = AI Validated
 status.ecm-applied          = Applied
 status.ecm-automatic        = Automatic
 status.ecm-cancelled        = Cancelled
