--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -188,5 +188,10 @@ type.qa_controlPlan                = Plan de contr\u00F4le
 type.qa_controlPoint               = Point de contr\u00F4le
 type.qa_controlStep                = Etape de contr\u00F4le
 type.qa_nc                         = Non conformit\u00E9
-type.qa_qualityControl             = Contr\u00F4le qualit\u00E9
+type.qa_qualityControl             = Contrôle qualité
 type.qa_workItemAnalysis           = Analyses \u00E0 r\u00E9aliser
+
+# AI Validation States
+status.ai-valid=Validé par IA
+status.ai-refused=Refusé par IA
+status.document-mandatory=Type de document obligatoire
