--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
@@ -33,12 +33,18 @@ data.revisiontype.major      = Majeure
 data.revisiontype.minor      = Mineure
 data.revisiontype.norevision = Sans r\u00E9vision
 
-status.entity-archived   = Archiv\u00E9
-status.entity-refused    = Refus\u00E9
-status.entity-simulation = Simulation
-status.entity-stopped    = Arr\u00EAt\u00E9
-status.entity-tovalidate = A valider
-status.entity-valid      = Valid\u00E9
+status.document-archived   = Archiv\u00E9
+status.document-refused    = Refus\u00E9
+status.document-simulation = Simulation
+status.document-stopped    = Arr\u00EAt\u00E9
+status.document-tovalidate = A valider
+status.document-valid      = Valid\u00E9
+status.entity-archived     = Archiv\u00E9
+status.entity-refused      = Refus\u00E9
+status.entity-simulation   = Simulation
+status.entity-stopped      = Arr\u00EAt\u00E9
+status.entity-tovalidate   = A valider
+status.entity-valid        = Valid\u00E9
 
 type.bcpg_entityListItem = Liste de donn\u00E9es d'une entit\u00E9
 type.bcpg_linkedValue    = Valeurs Li\u00E9es
