InProgress #24826 - [Feature] Add suggestion panel on documents

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -1,34 +1,43 @@
 
-actions.datalist.copy-to                = Copier la liste vers...
-actions.datalist.import-from            = Importer la liste depuis...
-actions.document.branch-entity          = Nouvelle version
-actions.document.cancel-checkout-entity = Annuler la nouvelle version
-actions.document.checkin-entity         = Ranger la nouvelle version
-actions.document.checkout-entity        = Nouvelle version
-actions.document.merge-entity           = Ranger la version
-actions.document.open-link              = Ouvrir le lien
-actions.document.refreshReports         = Rafra\u00EEchir les rapports
-actions.document.viewDesigner           = Editer le mod\u00E8le
-actions.entity.associated-process       = Processus associ\u00E9s
-actions.entity.associated-project       = Projets associ\u00E9s
-actions.entity.associated-workflow      = Workflows associ\u00E9s
-actions.entity.compare                  = Comparer avec...
-actions.entity.create-supplier          = Cr\u00E9er le compte fournisseur
-actions.entity.delete                   = Supprimer l'entit\u00E9
-actions.entity.download-report          = T\u00E9l\u00E9charger
-actions.entity.send-to-supplier         = Envoyer au fournisseur
-actions.entity.view-datalists           = Visualiser les caract\u00E9ristiques
-actions.entity.view-datalists.short     = Caract\u00E9ristiques
-actions.entity.view-details             = Visualiser les d\u00E9tails
-actions.entity.view-details.short       = D\u00E9tails
-actions.entity.view-documents           = Visualiser les documents
-actions.entity.view-documents.short     = Documents
-actions.entity.view-reports             = Visualiser les rapports
-actions.entity.view-reports.short       = Rapports
-actions.entity.wused                    = Cas d'emploi
-actions.entityTpl-formulate-entities    = Formuler les entit\u00E9s
-actions.entityTpl-synchronize-entities  = Synchroniser les entit\u00E9s
-actions.reportTpl-update-permissions    = Mettre \u00E0 jour les permissions
+action.ai-suggestion                       = Suggestions IA
+
+actions.datalist.copy-to                   = Copier la liste vers...
+actions.datalist.import-from               = Importer la liste depuis...
+actions.document.ai-suggestion             = Suggestions IA
+actions.document.ai-suggestion.description = Afficher les suggestions IA pour ce document
+actions.document.branch-entity             = Nouvelle version
+actions.document.cancel-checkout-entity    = Annuler la nouvelle version
+actions.document.checkin-entity            = Ranger la nouvelle version
+actions.document.checkout-entity           = Nouvelle version
+actions.document.merge-entity              = Ranger la version
+actions.document.open-link                 = Ouvrir le lien
+actions.document.refreshReports            = Rafra\u00EEchir les rapports
+actions.document.viewDesigner              = Editer le mod\u00E8le
+actions.entity.associated-process          = Processus associ\u00E9s
+actions.entity.associated-project          = Projets associ\u00E9s
+actions.entity.associated-workflow         = Workflows associ\u00E9s
+actions.entity.compare                     = Comparer avec...
+actions.entity.create-supplier             = Cr\u00E9er le compte fournisseur
+actions.entity.delete                      = Supprimer l'entit\u00E9
+actions.entity.download-report             = T\u00E9l\u00E9charger
+actions.entity.send-to-supplier            = Envoyer au fournisseur
+actions.entity.view-datalists              = Visualiser les caract\u00E9ristiques
+actions.entity.view-datalists.short        = Caract\u00E9ristiques
+actions.entity.view-details                = Visualiser les d\u00E9tails
+actions.entity.view-details.short          = D\u00E9tails
+actions.entity.view-documents              = Visualiser les documents
+actions.entity.view-documents.short        = Documents
+actions.entity.view-reports                = Visualiser les rapports
+actions.entity.view-reports.short          = Rapports
+actions.entity.wused                       = Cas d'emploi
+actions.entityTpl-formulate-entities       = Formuler les entit\u00E9s
+actions.entityTpl-synchronize-entities     = Synchroniser les entit\u00E9s
+actions.reportTpl-update-permissions       = Mettre \u00E0 jour les permissions
+
+ai.suggestion.tip       = Afficher les suggestions IA pour ce document
+
+aisuggestion.show.label = Suggestions IA
+aisuggestion.show.tip   = Afficher les suggestions IA pour ce document
 
 alert.popup.blocked = Popup bloqu\u00E9e. Veuillez autoriser les popups pour ce site.
 
@@ -155,6 +164,7 @@ menu.selected-items.quick-share             = Partager les documents
 menu.selected-items.unlock                  = D\u00E9verrouiller le(s) ligne(s)
 menu.selected-items.update-supplier-account = Mettre \u00E0 jour le compte fournisseur
 
+message.ai.suggestion.not.available           = Suggestions IA non disponibles pour ce document. Le document doit avoir une date de validation.
 message.annotation-cancel.failure             = Impossible d'annuler les annotations
 message.annotation-cancel.inprogress          = Annulation des annotations
 message.annotation-checkin.failure            = Impossible de ranger les annotations
