Fix #24826 - [Feature] Add suggestion panel on documents

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -58,11 +58,10 @@ bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Entit\u00E9 pa
 bcpg_bcpgmodel.description                                      = BCPG Domain Model
 bcpg_bcpgmodel.property.bcpg_aiExtraPrompt.title                = Extra prompt
 bcpg_bcpgmodel.property.bcpg_aiSuggestedFields.title            = Champs sugg\u00E9r\u00E9s
-bcpg_bcpgmodel.property.bcpg_aiValidationCriteria.title         = Crit\u00E8res de validation IA
-bcpg_bcpgmodel.property.bcpg_aiValidationDate.title             = Date de validation IA
-bcpg_bcpgmodel.property.bcpg_aiValidationHints.title            = Conseils
-bcpg_bcpgmodel.property.bcpg_aiValidationState.title            = Etat de valiation IA
-
+bcpg_bcpgmodel.property.bcpg_aiValidationCriteria.title         = Crit\u00E8res de validation
+bcpg_bcpgmodel.property.bcpg_aiValidationDate.title             = Date de validation Chef IA
+bcpg_bcpgmodel.property.bcpg_aiValidationHints.title            = R\u00E9sultat de validation Chef IA
+bcpg_bcpgmodel.property.bcpg_aiValidationState.title            = Etat de valiation Chef IA
 bcpg_bcpgmodel.property.bcpg_alData.title                       = Contenu de l'activit\u00E9
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Type d'activit\u00E9
 bcpg_bcpgmodel.property.bcpg_alUserId.title                     = Utilisateur
