--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -145,8 +145,8 @@ becpg.forms.help.variableWeightAllowableDeviationPercentage    = Indication de l
 becpg.forms.help.variableWeightRangeMinimum                    = La plage de poids variable minimum identifie le poids le plus bas du produit \u00E0 poids variable.
 becpg.forms.help.variantIds                                    = S\u00E9l\u00E9ctionner un \u00E9l\u00E9ment dans la liste pour avoir la possibilit\u00E9 de g\u00E9rer des variantes du produit.
 becpg.forms.set.ac-info.label                                  = Action corrective
-becpg.forms.set.ai-validation.label                            = Validation IA
-becpg.forms.set.ai.label                                       = IA
+becpg.forms.set.ai-validation.label                            = Validation Chef IA
+becpg.forms.set.ai.label                                       = Chef IA
 becpg.forms.set.alcohol.label                                  = Boisson alcoolis\u00E9e
 becpg.forms.set.allergens-claims.label                         = Allerg\u00E8nes et all\u00E9gations
 becpg.forms.set.animalFeeding.label                            = Alimentation animale
