--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -144,6 +144,10 @@ search.form.label.qa_batch                  = Ordre de fabrication
 search.form.label.qa_nc                     = Non-conformit\u00E9
 search.form.label.qa_qualityControl         = Contr\u00F4le qualit\u00E9
 
+status.ai-refused           = Refus\u00E9 par Chef IA
+# AI Validation States
+status.ai-valid             = Valid\u00E9 par Chef IA
+status.document-mandatory   = Type de document obligatoire
 status.ecm-applied          = Appliqu\u00E9
 status.ecm-automatic        = Automatique
 status.ecm-cancelled        = Annul\u00E9
@@ -188,10 +192,5 @@ type.qa_controlPlan                = Plan de contr\u00F4le
 type.qa_controlPoint               = Point de contr\u00F4le
 type.qa_controlStep                = Etape de contr\u00F4le
 type.qa_nc                         = Non conformit\u00E9
-type.qa_qualityControl             = Contrôle qualité
+type.qa_qualityControl             = Contr\u00C3\u00B4le qualit\u00C3\u00A9
 type.qa_workItemAnalysis           = Analyses \u00E0 r\u00E9aliser
-
-# AI Validation States
-status.ai-valid=Validé par IA
-status.ai-refused=Refusé par IA
-status.document-mandatory=Type de document obligatoire
