--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -1,9 +1,9 @@
 
-action.ai-suggestion                       = Suggestions IA
+action.ai-suggestion                       = Suggestions
 
 actions.datalist.copy-to                   = Copier la liste vers...
 actions.datalist.import-from               = Importer la liste depuis...
-actions.document.ai-suggestion             = Suggestions IA
+actions.document.ai-suggestion             = Suggestions
 actions.document.ai-suggestion.description = Afficher les suggestions IA pour ce document
 actions.document.branch-entity             = Nouvelle version
 actions.document.cancel-checkout-entity    = Annuler la nouvelle version
@@ -36,8 +36,8 @@ actions.reportTpl-update-permissions       = Mettre \u00E0 jour les permissions
 
 ai.suggestion.tip       = Afficher les suggestions IA pour ce document
 
-aisuggestion.show.label = Suggestions IA
-aisuggestion.show.tip   = Afficher les suggestions IA pour ce document
+aisuggestion.show.label = Suggestions
+aisuggestion.show.tip   = Afficher les suggestions Chef IA pour ce document
 
 alert.popup.blocked = Popup bloqu\u00E9e. Veuillez autoriser les popups pour ce site.
 
