Fix #23404 - [Feature] Add document formulation

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
@@ -55,6 +55,7 @@ status.entity-valid                  = Valid\u00E9
 type.bcpg_entityListItem = Liste de donn\u00E9es d'une entit\u00E9
 type.bcpg_linkedValue    = Valeurs Li\u00E9es
 type.bcpg_listValue      = Valeurs
+type.document            = Document
 type.ext1_customType     = Type personnalis\u00E9
 type.rep_reportTpl       = Mod\u00E8le de rapport
 type.sec_aclGroup        = Groupe de permissions
