Fix  #27453 - [Feature] Fix FR properties

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -48,7 +48,7 @@ basket.remove.tip = Supprimer
 becpg.faceted-search.date.next-one-month.label     = Prochain mois
 becpg.faceted-search.date.next-one-week.label      = Prochaine semaine
 becpg.faceted-search.date.next-one-year.label      = Prochaine ann\u00E9e
-becpg.faceted-search.date.next-six-months.label    = Prochain 6 mois
+becpg.faceted-search.date.next-six-months.label    = Prochains 6 mois
 becpg.faceted-search.date.next-six-years.label     = Prochaines 6 ann\u00E9es
 becpg.faceted-search.date.next-three-months.label  = Prochains 3 mois
 becpg.faceted-search.date.next-three-years.label   = Prochaines 3 ann\u00E9es
