--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -242,7 +242,7 @@ data.list.resourceParam                       = Param\u00E8tres ressource
 data.list.resourceParamList                   = Param\u00E8tres ressource
 data.list.resourceparamtypes                  = Types de param\u00E8tre ressource
 data.list.resourceproduct_hierarchy           = Hi\u00E9rarchie des ressources
-data.list.scoreCriterion                     = Critères d'évaluation
+data.list.scoreCriterion                      = Crit\u00C3\u00A8res d'\u00C3\u00A9valuation
 data.list.scoreList                           = Evaluations
 data.list.securitylist                        = Listes s\u00E9curit\u00E9
 data.list.sellingunitofmeasure                = Unit\u00E9s de mesure utilis\u00E9e pour la Facture
@@ -354,6 +354,8 @@ message.formulate.clp.forbidden                       = Classification interdite
 message.formulate.comparewith.formulate.entity.error  = Impossible de formuler l'entit\u00E9 \u00E0 comparer: {0}
 message.formulate.cost.formulated                     = Formulation
 message.formulate.costList.error                      = Erreur lors de la formulation du co\u00FBt ''{0}'': - {1}
+message.formulate.document.error                      = Erreur lors de la formulation du document ''{0}'': - {1}
+message.formulate.document.mandatory                  = Document obligatoire ''{0}'' non renseign\u00E9e
 message.formulate.empty_req_geo_origin_list           = Les cahiers des charges sont incompatibles : les origines g\u00E9ographiques requises pour la contrainte ''{0}'' n''ont aucun \u00E9lement commun
 message.formulate.formula.error                       = Erreur dans la formule ''{0}''
 message.formulate.formula.incorrect.nutrientProfile   = Erreur dans le calcul du profil nutritionnel : {0}
