InProgress #5742 - [Feature] Added tertiaryPackagingTypeCode

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -288,6 +288,7 @@ gs1_gs1Model.property.gs1_targetMarketCode.title                                
 gs1_gs1Model.property.gs1_temperatureMeasurementUnit.title                                = Unit\u00E9 temp\u00E9rature
 gs1_gs1Model.property.gs1_tertiaryDepth.title                                             = Profondeur (mm)
 gs1_gs1Model.property.gs1_tertiaryNetWeight.title                                         = Poids net palette (kg)
+gs1_gs1Model.property.gs1_tertiaryPackagingTypeCode.title                                 = Type d'unit\u00E9 logistique
 gs1_gs1Model.property.gs1_tertiaryWeight.title                                            = Poids brut palette (kg)
 gs1_gs1Model.property.gs1_tertiaryWidth.title                                             = Largeur (mm)
 gs1_gs1Model.property.gs1_tradeItemCompositionDepth.description                           = Le nombre d'unit\u00E9s fils qui sont contenues dans la colonne qui va de la rang\u00E9e faisant face au consommateur \u00E0 la derni\u00E8re rang\u00E9e. Information pour le pr\u00EAt \u00E0 vendre. Informations importantes pour la mise en rayon lorsqu'aucune autre information n'est disponible (photos...)
