--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -36,7 +36,7 @@ survey_surveymodel.property.survey_questionScore.title                = Score
 survey_surveymodel.property.survey_questionType.title                 = Crit\u00E8res d'\u00E9valuation
 survey_surveymodel.property.survey_questionUpperNote.title            = Note sup\u00E9rieure
 survey_surveymodel.property.survey_questionUrl.title                  = Url
-survey_surveymodel.property.survey_responseCommentLabel.title         = Label du commentaire
+survey_surveymodel.property.survey_responseCommentLabel.title         = Libell\u00E9 du commentaire
 survey_surveymodel.property.survey_responseCommentType.title          = Type de commentaire
 survey_surveymodel.property.survey_responseType.title                 = Type de r\u00E9ponse
 survey_surveymodel.property.survey_slComment.title                    = Commentaire
