Fix #23404 - [Feature] Add Document export + document category + fix init repo + help destpath

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -37,6 +37,7 @@ path.controlunits                        = Unit\u00E9s de contr\u00F4le
 path.costs                               = Co\u00FBts
 path.customscodes                        = Codes douaniers
 path.datacarriertypecode                 = Types de code \u00E0 barres
+path.documentcategories                  = Cat\u00E9gories de document
 path.documenttypes                       = Types de document
 path.dutyfeetaxagencycodes               = Organismes fiscaux
 path.dutyfeetaxcategorycodes             = Cat\u00E9gories fiscales
@@ -51,6 +52,7 @@ path.exportciteopro                      = Export des mat\u00E9riaux d'emballage
 path.exportclientscorelist               = Export des \u00E9valuations clients
 path.exportclientsurvey                  = Export des questionnaires clients
 path.exportcompositionpackaging          = Export des listes composition et emballages
+path.exportdocuments                     = Export des documents
 path.exportdynamiccharactlist            = Export des caract\u00E9ristiques calcul\u00E9es
 path.exportforbiddening                  = Export des ingr\u00E9dients interdits
 path.exportinglist                       = Export des ingr\u00E9dients
