--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -33,6 +33,7 @@ becpg.forms.help.compoListProduct                              = S\u00E9lectionn
 becpg.forms.help.compoListQtySubFormula                        = Entrer les quantit\u00E9s utilis\u00E9es dans la composition.
 becpg.forms.help.compoListYieldPerc                            = Renseigner le rendement li\u00E9 \u00E0 la cuisson.
 becpg.forms.help.contractDate                                  = Entrer la dur\u00E9e minimale d'engagement vis \u00E0 vis du client
+becpg.forms.help.docTypeDestPath                               = Chemin du document dans l'entit\u00E9. Par d\u00E9faut: ./SupplierDocuments/
 becpg.forms.help.dropPackagingOfComponents                     = Cocher si les emballages des composants sont jet\u00E9s. La tare des emballages ne sera pas prise en compte.
 becpg.forms.help.eanCode                                       = Entrer le code GTIN/EAN du produit
 becpg.forms.help.eanCodeLevel2                                 = Entrer le code GTIN/EAN du colis
