--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -67,6 +67,7 @@ data.list.customsCode                         = Codes douaniers
 data.list.datacarriertypecode                 = Types de code \u00E0 barres
 data.list.deliverableList                     = Livrable
 data.list.documentType                        = Types de documents
+data.list.documentcategories                  = Cat\u00E9gories de document
 data.list.dutyFeeTax                          = Taxes
 data.list.dynamicCharactList                  = Caract\u00E9ristiques calcul\u00E9es
 data.list.eco                                 = Ordres de modifications
@@ -77,6 +78,7 @@ data.list.exportallergens                     = Export des allerg\u00E8nes
 data.list.exportciteo                         = Export des mat\u00E9riaux d'emballage (Citeo)
 data.list.exportciteopro                      = Export des mat\u00E9riaux d'emballage (Citeo Professionnel)
 data.list.exportcompositionpackaging          = Export des listes composition et emballages
+data.list.exportdocuments                     = Export des documents
 data.list.exportinglist                       = Export des ingr\u00E9dients
 data.list.exportlabelclaimlist                = Export des all\u00E9gations
 data.list.exportlabelling                     = Export de l'\u00E9tiquetage
