--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -36,6 +36,7 @@ path.controlunits                        = Unit\u00E9s de contr\u00F4le
 path.costs                               = Co\u00FBts
 path.customscodes                        = Codes douaniers
 path.datacarriertypecode                 = Types de code \u00E0 barres
+path.dutyfeetaxagencycodes               = Organismes fiscaux
 path.dutyfeetaxes                        = Taxes
 path.eco                                 = Ordres de modifications
 path.ecoreports                          = Rapports sur les OM
