Fix #5742 - [Feature] GS1 volume formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -263,6 +263,7 @@ gs1_gs1Model.property.gs1_secondaryNetWeight.title                              
 gs1_gs1Model.property.gs1_secondaryPackagingTypeCode.title                                = Type d'unit\u00E9 logistique
 gs1_gs1Model.property.gs1_secondaryStackingFactor.title                                   = Nb colis par emplacement (gerbage)
 gs1_gs1Model.property.gs1_secondaryStackingMaxWeight.title                                = Poids maximum de gerbage (kg)
+gs1_gs1Model.property.gs1_secondaryVolume.title                                           = Volume (L)
 gs1_gs1Model.property.gs1_secondaryWeight.title                                           = Poids brut colis(kg)
 gs1_gs1Model.property.gs1_secondaryWidth.title                                            = Largeur (mm)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.description                                = Indication de l\u2019unit\u00E9 de mesure qui doit \u00EAtre utilis\u00E9e pour facturer l\u2019unit\u00E9 commerciale (pour les unit\u00E9s commerciales non vendues \u00E0 la pi\u00E8ce) (kg, m, m\u00B2, m3, l, \u2026)
@@ -289,6 +290,7 @@ gs1_gs1Model.property.gs1_temperatureMeasurementUnit.title                      
 gs1_gs1Model.property.gs1_tertiaryDepth.title                                             = Profondeur (mm)
 gs1_gs1Model.property.gs1_tertiaryNetWeight.title                                         = Poids net palette (kg)
 gs1_gs1Model.property.gs1_tertiaryPackagingTypeCode.title                                 = Type d'unit\u00E9 logistique
+gs1_gs1Model.property.gs1_tertiaryVolume.title                                            = Volume (L)
 gs1_gs1Model.property.gs1_tertiaryWeight.title                                            = Poids brut palette (kg)
 gs1_gs1Model.property.gs1_tertiaryWidth.title                                             = Largeur (mm)
 gs1_gs1Model.property.gs1_tradeItemCompositionDepth.description                           = Le nombre d'unit\u00E9s fils qui sont contenues dans la colonne qui va de la rang\u00E9e faisant face au consommateur \u00E0 la derni\u00E8re rang\u00E9e. Information pour le pr\u00EAt \u00E0 vendre. Informations importantes pour la mise en rayon lorsqu'aucune autre information n'est disponible (photos...)
@@ -319,6 +321,7 @@ gs1_gs1Model.property.gs1_vintage.description                                   
 gs1_gs1Model.property.gs1_vintage.title                                                   = Mill\u00E9sime (AAAA)
 gs1_gs1Model.property.gs1_vintner.description                                             = La personne embauch\u00E9e par un domaine viticole ou une entreprise viticole qui est responsable de nombreux processus de pr\u00E9paration, le go\u00FBt et la qualit\u00E9 du vin produit. La science du vin la fabrication est appel\u00E9e \u0153nologie. Le vigneron est le \u0153nologue.
 gs1_gs1Model.property.gs1_vintner.title                                                   = Vigneron
+gs1_gs1Model.property.gs1_volume.title                                                    = Volume (L)
 gs1_gs1Model.property.gs1_weight.title                                                    = Poids brut (kg)
 gs1_gs1Model.property.gs1_width.title                                                     = Largeur (mm)
 gs1_gs1Model.type.gs1_alcoholBeverageContainer.description                                = Liste des r\u00E9cipients pour boissons alcoolis\u00E9es
