InProgress #16023 - [Feature] Formulate labelClaim value

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -369,6 +369,7 @@ message.formulate.info.nut.notInRangeValue.GdaPerc    = Le nutriment {0} (valeur
 message.formulate.info.nut.notInRangeValue.Serving    = Le nutriment {0} (valeur 1 portion: {1}) respecte le cahier des charges ({2}valeur attendue{3})
 message.formulate.info.physicoChem.notInRangeValue    = La caract\u00E9ristique {0} (valeur: {1}) respecte le cahier des charges ({2}valeur attendue{3})
 message.formulate.ingredient.forbidden                = Un ingr\u00E9dient ({0}) est interdit par le cahier des charges
+message.formulate.labelClaim.certifiedError           = L''all\u00E9gation ''{0}'' a une valeur de pourcentage ({1}) inf\u00E9rieure au seuil r\u00E9glementaire ({2}) et ne devrait pas \u00EAtre certifi\u00E9.
 message.formulate.labelClaim.error                    = Erreur lors de la formulation de l''all\u00E9gation ''{0}'': - {1}
 message.formulate.labelClaim.missing                  = All\u00E9gation ''{0}'' non renseign\u00E9e
 message.formulate.labelClaim.notClaimed               = L''all\u00E9gation ''{0}'' doit \u00EAtre {1}
