Fix #14498 - [Bug] Use product mode for physico and cost missing characts

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -27,6 +27,7 @@ beCPG.formulation.ingsCalculatingWithYield.description         = Permet de sp\u0
 beCPG.formulation.nutList.propagateUpEnable.description        = Permet de d\u00E9finir si les nutriments se propagent depuis la composition
 beCPG.formulation.score.nutriscore.regulatoryClass.description = Permet de sp\u00E9cifier la classe Java utilis\u00E9e pour le calcul du Nutriscore
 beCPG.formulation.security.enforceACL                          = Permet de d\u00E9finir si les r\u00E8gles de s\u00E9curit\u00E9 doivent appliquer des droits d'accc\u00E8s sur les listes lors de la formulation
+beCPG.formulation.security.forceResetACL                        = Force les r\u00E8gles de s\u00E9curit\u00E9 \u00E0 r\u00E9initialiser toutes les permissions m\u00EAme si enforceACL est d\u00E9sactiv\u00E9
 beCPG.formulation.specification.addInfoReqCtrl.description     = Permet de sp\u00E9cifier si les exigences de sp\u00E9cification de type informative doivent \u00EAtre ajout\u00E9es au produit
 beCPG.multilinguale.disabledMLTextFields.description           = Permet de d\u00E9sactiver les multilingues pour certains champs. Vous pouvez sp\u00E9cifier les champs concern\u00E9s en les s\u00E9parant par des virgules
 beCPG.multilinguale.shouldExtractMLText.description            = Permet de sp\u00E9cifier si le syst\u00E8me doit extraire les champs multilingues dans plusieurs langues ou seulement dans la langue par d\u00E9faut
