Fix #28700 - [Bug] Fix toxicology formulation

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/batches_fr.properties
@@ -2,6 +2,7 @@
 becpg.batch.activity.cleanActivities                = Nettoyage des activit\u00E9s
 becpg.batch.automaticECO.autoMergeBranch            = Fusion automatique des branches
 becpg.batch.automaticECO.reformulateChangedEntities = Reformulation des entit\u00E9s modifi\u00E9es
+becpg.batch.deleteToxIng                            = Suppression de toxicologies des ingr\u00E9dients
 becpg.batch.eco.apply                               = Application de l''ordre de modification {0}
 becpg.batch.eco.calculateWUsed                      = Calcul des cas d''emploi {0}
 becpg.batch.eco.close                               = Finalisation de l''ordre de modification {0}
@@ -20,5 +21,7 @@ becpg.batch.entityTpl.updatePermissions             = Mise \u00E0 jour des permi
 becpg.batch.entityUnarchiving                       = D\u00E9sarchivage de l''entit\u00E9 {0}
 becpg.batch.import                                  = Import du fichier ''{0}''
 becpg.batch.productSpecification.formulation        = Formulation du cahier des charges : {0}
+becpg.batch.updateOrCreateToxIng                    = Cr\u00E9ation de toxicologies des ingr\u00E9dients
+becpg.batch.updateToxIng                            = Mise \u00E0 jour de toxicologies des ingr\u00E9dients
 becpg.batch.versionCleaner.cleanOrphanVersions      = Nettoyage des versions orphelines
 becpg.batch.versionCleaner.cleanVersions            = Nettoyage des versions
