Fix #28251 - [Feature] Added logisticUnit in catalog dashlet

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/dashlets/product-catalog.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/dashlets/product-catalog.get_fr.properties
@@ -30,6 +30,7 @@ header = Catalogue produit
 type.client                  = Client
 type.ecm_changeOrder         = Ordre de modification
 type.finishedProduct         = Produit fini
+type.logisticUnit			 = Unit\u00E9 logistique
 type.packagingKit            = Kit d'emballage
 type.packagingMaterial       = Emballage
 type.product                 = Produit
