Fix #28257 - [Feature] Add LabeledServing, LabeledAsPrepared ... in nut requirement scanner

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -791,6 +791,12 @@ listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Less Tha
 listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Prepared value
 listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % RI per portion
 listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 serving
+listconstraint.bcpg_nutListRequirementTypes.LabeledServing            = Labeled serving
+listconstraint.bcpg_nutListRequirementTypes.LabeledAsPrepared         = Labeled prepared value
+listconstraint.bcpg_nutListRequirementTypes.LabeledGdaPerc            = % RI per labeled serving
+listconstraint.bcpg_nutListRequirementTypes.LabeledValue               = Labeled value
+listconstraint.bcpg_nutListRequirementTypes.LabeledAsPreparedServing   = Labeled prepared value per serving
+listconstraint.bcpg_nutListRequirementTypes.AsPreparedServing          = Prepared value per serving
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Prepared
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Unprepared
 listconstraint.bcpg_packagingLevel.Primary                            = Primary
