--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -789,6 +789,12 @@ listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Inf\u00E
 listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Valeur pr\u00E9par\u00E9
 listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % AR par portion
 listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 portion
+listconstraint.bcpg_nutListRequirementTypes.LabeledServing            = Portion \u00E9tiquet\u00E9e
+listconstraint.bcpg_nutListRequirementTypes.LabeledAsPrepared         = Valeur \u00E9tiquet\u00E9e pr\u00E9par\u00E9e
+listconstraint.bcpg_nutListRequirementTypes.LabeledGdaPerc            = % AR par portion \u00E9tiquet\u00E9e
+listconstraint.bcpg_nutListRequirementTypes.LabeledValue               = Valeur \u00E9tiquet\u00E9e
+listconstraint.bcpg_nutListRequirementTypes.LabeledAsPreparedServing   = Valeur \u00E9tiquet\u00E9e pr\u00E9par\u00E9e par portion
+listconstraint.bcpg_nutListRequirementTypes.AsPreparedServing          = Valeur pr\u00E9par\u00E9e par portion
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Pr\u00E9par\u00E9
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Non pr\u00E9par\u00E9
 listconstraint.bcpg_packagingLevel.Primary                            = Primaire
